--- a/overlay-lineage/packages/apps/Settings/res/values/config.xml
+++ b/overlay-lineage/packages/apps/Settings/res/values/config.xml
@@ -21,5 +21,11 @@
     <!-- Whether to show Smooth Display feature in Settings Options -->
     <bool name="config_show_smooth_display">true</bool>
 
+    <!-- Whether to show a preference item for regulatory information in About phone -->
+    <bool name="config_show_regulatory_info">true</bool>
+
+    <!-- Whether to show the Preference for Touch Sensitivity -->
+    <bool name="config_show_touch_sensitivity">true</bool>
+
 </resources>
 
